Partial_14Dec2021/force-app/main/default/objects/REST_API_Configuration__mdt/REST_API_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>REST API Configuration</description>
    <label>REST API Configuration</label>
    <pluralLabel>REST API Configuration</pluralLabel>
</CustomObject>