Partial_14Dec2021/force-app/main/default/objects/REST_API_Configuration__mdt/fields/Authentication_Key__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Key__c</fullName>
    <description>Authentication Key</description>
    <label>Authentication Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>