Partial_14Dec2021/force-app/main/default/objects/REST_API_Configuration__mdt/fields/Authentication_Value__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Value__c</fullName>
    <description>Authentication Value</description>
    <label>Authentication Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>