Partial_14Dec2021/force-app/main/default/objects/REST_API_Configuration__mdt/fields/End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>End_Point_URL__c</fullName>
    <description>End Point URL</description>
    <label>End Point URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>